<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_help">

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.shell.hacks.ui.home.HomeFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/navigation_task"
        android:name="com.shell.hacks.ui.dashboard.DashboardFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.shell.hacks.ui.notifications.NotificationsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>